# CommerceContentGenerator

./: .gitignore  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
comm_con_gen/: README.md  articles.json  countries.py  streamlit_app.py  utility.py
comm_con_gen/guides/: dealradar.txt  giftguide.txt  howto.txt  listicle.txt  product_review.txt
comm_con_gen/html_outputs/: grills_gift guide_israel_hebrew_2024-09-15, 2024-09-24_Cntraveler_claude-3-opus-20240229_2024-09-15:-rosh-hashanah,-2024-09-24:-yom-kippur.html
comm_con_gen/outputs/: grills_deal radar_france_french_2024-06-09_Cntraveler_claude-3-opus-20240229_2024-06-09:-pentecost-sunday.md  grills_gift guide_israel_hebrew_2024-09-15, 2024-09-24_Cntraveler_claude-3-opus-20240229_2024-09-15:-rosh-hashanah,-2024-09-24:-yom-kippur.md  grills_how to_spain_spanish_2024-09-17_Bbcgoodfood_claude-3-opus-20240229_no-event.md  laptops_gift guide_germany_german_2024-07-14_Cntraveler_claude-3-opus-20240229_2024-07-14:-bastille-day.md  laptops_listicle_egypt_arabic_2024-11-10_Cntraveler_claude-3-opus-20240229_2024-11-10:-prophet's-birthday.md  sneakers_gift guide_united states_english_2024-05-23_Cntraveler_claude-3-opus-20240229_no-event.md  sneakers_gift guide_united states_english_2024-05-27_Cntraveler_claude-3-opus-20240229_2024-05-27:-memorial-day.md  sneakers_gift guide_united states_english_2025-02-11_Cntraveler_claude-3-5-sonnet-20241022_no-event.md  sneakers_gift guide_united states_english_2025-02-14_Cntraveler_claude-3-opus-20240229_2025-02-14:-valentine's-day.md
(+12 files in other folders)
