[project]
name = "comm_con_gen"
version = "0.1.0"
description = "Commerce Content Generator using Anthropic's Claude AI models"
authors = [
    {name = "Alex Springer", email = "alexspringer@pm.me"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.2",
    "bs4>=0.0.2",
    "markdown>=3.7",
    "streamlit>=1.42.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true